# betfair_worker

./: .gitignore  APIClient.cpp  APIClient.h  APILoader.cpp  APILoader.h  Application.cpp  Application.h  Authentication.cpp  Authentication.h  BetfairAPI.cpp  BetfairAPI.h  BetfairData.cpp  BetfairData.h  CMakeLists.txt  DataModel.h  DataModels.cpp  DataModels.h  NavigationLoader.cpp  NavigationLoader.h  TaskManager.cpp  TaskManager.h  Utility.cpp  Utility.h  WebServer.cpp  WebServer.h  betfair_examples.cpp  sxclientd.cpp
api_data/: APINGException.cpp  APINGException.h  CancelExecutionReport.cpp  CancelExecutionReport.h  CancelInstruction.cpp  CancelInstruction.h  CancelInstructionReport.cpp  CancelInstructionReport.h  ClearedOrderSummary.cpp  ClearedOrderSummary.h  ClearedOrderSummaryReport.cpp  ClearedOrderSummaryReport.h  Competition.cpp  Competition.h  CompetitionResult.h  CountryCodeResult.cpp  CountryCodeResult.h  CurrentOrderSummary.cpp  CurrentOrderSummary.h  CurrentOrderSummaryReport.cpp  CurrentOrderSummaryReport.h  Event.cpp  Event.h  EventResult.cpp  EventResult.h  EventType.cpp  EventType.h  EventTypeResult.cpp  EventTypeResult.h  ExBestOffersOverrides.cpp  ExBestOffersOverrides.h  ExchangePrices.cpp  ExchangePrices.h  ItemDescription.cpp  ItemDescription.h  KeyLineDescription.cpp  KeyLineDescription.h  KeyLineSelection.cpp  KeyLineSelection.h  LimitOnCloseOrder.cpp  (+55 more)
betfair_data/: BetfairEvent.cpp  BetfairEvent.h  BetfairEventType.cpp  BetfairEventType.h  BetfairGroup.cpp  BetfairGroup.h  BetfairMarket.cpp  BetfairMarket.h  BetfairObject.cpp  BetfairObject.h  BetfairOrder.cpp  BetfairOrder.h  BetfairRace.cpp  BetfairRace.h  BetfairRunner.cpp  BetfairRunner.h  MarketFilter.cpp  MarketFilter.h
betting_type/: APINGException.cpp  APINGException.h  CancelExecutionReport.cpp  CancelExecutionReport.h  CancelInstruction.cpp  CancelInstruction.h  CancelInstructionReport.cpp  CancelInstructionReport.h  ClearedOrderSummary.h  Competition.cpp  Competition.h  CompetitionResult.cpp  CompetitionResult.h  CountryCodeResult.h  CurrentOrderSummary.cpp  CurrentOrderSummary.h  CurrentOrderSummaryReport.cpp  CurrentOrderSummaryReport.h  Event.cpp  Event.h  EventResult.h  EventType.cpp  EventType.h  EventTypeResult.h  ExBestOffersOverrides.cpp  ExBestOffersOverrides.h  ExchangePrices.cpp  ExchangePrices.h  ItemDescription.cpp  ItemDescription.h  KeyLineDescription.cpp  KeyLineDescription.h  KeyLineSelection.cpp  KeyLineSelection.h  LimitOnCloseOrder.cpp  LimitOnCloseOrder.h  LimitOrder.cpp  LimitOrder.h  MarketBook.cpp  MarketBook.h  (+52 more)
data_models/: DataObject.cpp  DataObject.h  Event.cpp  Event.h  EventType.cpp  EventType.h  Filter.cpp  Filter.h  Group.cpp  Group.h  Market.cpp  Market.h  MarketFilter.cpp  MarketFilter.h  MarketRunner.cpp  MarketRunner.h  MarketSorter.cpp  MarketSorter.h  Order.cpp  Order.h  Race.cpp  Race.h  Runner.cpp  Runner.h  Sorter.cpp  Sorter.h
